--- a/WebStoreGusev/WebStoreGusev.csproj
+++ b/WebStoreGusev/WebStoreGusev.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebStore.Domain\WebStore.Domain.csproj" />
+    <ProjectReference Include="..\WebStoreGusev.DomainNew\WebStoreGusev.DomainNew.csproj" />
   </ItemGroup>
 
   <ItemGroup>
