--- a/WebStoreGusev.DomainNew/WebStoreGusev.DomainNew.csproj
+++ b/WebStoreGusev.DomainNew/WebStoreGusev.DomainNew.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
