--- a/WebStoreGusev/appsettings.json
+++ b/WebStoreGusev/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStoreGusev;Trusted_Connection=True;Connection Timeout=30;"
+  }
 }
